--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -3,3 +3,37 @@
 @tailwind utilities;
 
 .font-n { font-family: 'Nunito', sans-serif; }
+.color-bg-white { background-color: #f8f9fb; }
+.logo {
+  font-size: 1.5rem;
+  font-family: 'Nunito', sans-serif;
+  font-weight: 700;
+  letter-spacing: .05rem;
+}
+.btn-primary {
+  @apply flex items-center justify-center rounded-xl bg-white text-black border-0 py-2 px-6 font-bold text-base hover:bg-green-800 bg-green-600 text-white transition-all;
+  font-family: 'Nunito', sans-serif;
+  word-spacing: .05rem;
+  letter-spacing: .05rem;
+}
+
+.btn-outline {
+  @apply flex items-center justify-center rounded-xl bg-white py-2 px-6 font-bold text-base hover:bg-green-600 h-16 border border-green-600 text-green-600 hover:text-white transition-all;
+  font-family: 'Nunito', sans-serif;
+  word-spacing: .05rem;
+  letter-spacing: .05rem;
+}
+
+.btn-link {
+  @apply flex items-center justify-center bg-transparent text-green-600 underline;
+}
+
+.btn-big { @apply h-16; }
+.btn-sm { @apply h-12; }
+.w-90p { width: 90%; }
+.w-80p { width: 80%; }
+.h-90p { height: 90%; }
+.h-80p { height: 80%; }
+.hover-w-90p:hover { width: 90%; }
+.hover-h-90p:hover { height: 90%; }
+.leading-15 { line-height: 4rem; }
