--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -52,3 +52,9 @@
 .p-elipsis-l-2 { -webkit-line-clamp: 2; }
 .p-elipsis-l-3 { -webkit-line-clamp: 3; }
 .p-elipsis-l-4 { -webkit-line-clamp: 4; }
+
+@media only screen and (min-width: 0px) and (max-width: 768px) {
+  .w-90p { width: 90%; }
+  .w-80p { width: 90%; }
+  .h-80p { height: 90%; }
+}
